# caiml_causality_2025

./: .gitignore  README.md  pyproject.toml
helpers/: data_generation.py
notebooks/: 0_deceptive_models.ipynb  1_deceptive_models.ipynb
notebooks/presentation_outputs/: attribution_breakdown.csv  attribution_data.csv  attribution_final_summary.csv  final_summary.csv  seasonal_campaign_data.csv
