[project]
name = "caiml_causality_2025"
version = "0.1.0"
description = "Experiments in causal inference"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "pymc",
    "matplotlib",
    "seaborn",
    "ipykernel"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
